[package]
name = "cags"
version = "0.1.0"
authors = ["Alexandre Duc <alexandre.aduc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
read_input = "0.8"
lazy_static = "1.4.0"
serde_json = "1.0"
rust-argon2 = "0.8.3"
regex ="1.5.4"
rand = "0.8.3"
passablewords = "1.0.1"
casbin = { version = "2.0.7", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3"
csv = "1.1.6"